src/objects/Program__c.object
<CustomObject>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Fee_Year__c</fullName>
        <label>Fee Year</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fee__c</fullName>
        <label>Fee</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Total_Program_Fee__c</fullName>
        <label>Total Program Fee</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tution_Fee_Unit__c</fullName>
        <label>Tution Fee Unit</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>Program</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Program Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Programs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>